--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "draftjs-utils": "^0.10.2",
     "html-to-draftjs": "^1.5.0",
     "linkify-it": "^2.2.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-scripts": "^3.4.3"
   },
   "peerDependencies": {
     "draft-js": "^0.10.x || ^0.11.x",
@@ -77,7 +78,20 @@
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "check": "npm run lint && npm run flow",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "license": "MIT"
 }
